--- a/player_jsantos/package.xml
+++ b/player_jsantos/package.xml
@@ -45,12 +45,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>rwsfi2016_libs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>rwsfi2016_libs</run_depend>
+  <run_depend>visualization_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
