--- a/player_jsantos/CMakeLists.txt
+++ b/player_jsantos/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   visualization_msgs
   tf
   rwsfi2016_libs
+  pcl_ros
 )
 
 ## System dependencies are found with CMake's conventions
