--- a/player_jsantos/package.xml
+++ b/player_jsantos/package.xml
@@ -46,6 +46,7 @@
   <build_depend>tf</build_depend>
   <build_depend>rwsfi2016_libs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>pcl_ros</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -53,6 +54,7 @@
   <run_depend>tf</run_depend>
   <run_depend>rwsfi2016_libs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>pcl_ros</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
